--- a/app/src/main/res/layout/order_detail_title_frg.xml
+++ b/app/src/main/res/layout/order_detail_title_frg.xml
@@ -2,48 +2,54 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clickable="true"
-    android:focusable="true"
     android:orientation="horizontal">
 
 
     <TextView
-        android:id="@+id/detail_barcode_barcode"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:background="#F4F4F4"
+        android:gravity="center"
+        android:text="产品名" />
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:background="#F0FFF0"
+        android:gravity="center"
+        android:text="规格" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="0.5"
+        android:background="#F4F4F4"
+        android:gravity="center"
+        android:text="应装" />
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="0.5"
+        android:background="#F0FFF0"
+        android:gravity="center"
+        android:text="实装" />
+
+    <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1.5"
-        android:background="@drawable/recycler_item_bg1"
+        android:background="#F4F4F4"
         android:gravity="center"
-        android:textSize="14sp" />
+        android:text="客户名" />
 
-    <TextView
-        android:id="@+id/detail_barcode_goodname"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:background="@drawable/recycler_item_bg2"
-        android:gravity="center"
-        android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/detail_barcode_goodmodle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:background="@drawable/recycler_item_bg1"
-        android:gravity="center"
-        android:textSize="14sp" />
-
-    <TextView
-        android:id="@+id/detail_barcode_weight"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:background="@drawable/recycler_item_bg2"
-        android:gravity="center"
-        android:textSize="14sp" />
 </LinearLayout>
