--- a/app/src/main/res/layout/order_no_detail_title_frg.xml
+++ b/app/src/main/res/layout/order_no_detail_title_frg.xml
@@ -8,42 +8,42 @@
 
 
     <TextView
-        android:id="@+id/detail_barcode_barcode"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1.5"
-        android:background="@drawable/recycler_item_bg1"
         android:gravity="center"
-        android:textSize="14sp" />
+        android:text="货品条码"
+        android:textSize="14sp"
+        android:background="@drawable/recycler_item_bg1"/>
 
     <TextView
-        android:id="@+id/detail_barcode_goodname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
-        android:background="@drawable/recycler_item_bg2"
         android:gravity="center"
-        android:textSize="14sp" />
+        android:text="产品名称"
+        android:textSize="14sp"
+        android:background="@drawable/recycler_item_bg2"/>
 
     <TextView
-        android:id="@+id/detail_barcode_goodmodle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
-        android:background="@drawable/recycler_item_bg1"
         android:gravity="center"
-        android:textSize="14sp" />
+        android:text="规格"
+        android:textSize="14sp"
+        android:background="@drawable/recycler_item_bg1"/>
 
     <TextView
-        android:id="@+id/detail_barcode_weight"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
-        android:background="@drawable/recycler_item_bg2"
         android:gravity="center"
-        android:textSize="14sp" />
+        android:text="客户名"
+        android:textSize="14sp"
+        android:background="@drawable/recycler_item_bg2"/>
 </LinearLayout>
