--- a/app/src/main/res/layout/activity_good_add_load.xml
+++ b/app/src/main/res/layout/activity_good_add_load.xml
@@ -78,7 +78,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="应装重量："
+                    android:text="装车重量："
                     android:textSize="16sp" />
 
                 <TextView
@@ -96,7 +96,7 @@
     <FrameLayout
         android:id="@+id/good_add_load_scan_result_frg"
         android:layout_width="match_parent"
-        android:layout_height="210dp"></FrameLayout>
+        android:layout_height="220dp"></FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
